change edit list type modal v-model

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       </div>
                       <div class="field">
                         <div class="select">
-                          <select v-model="checkList">
+                          <select v-model="editList">
                             <option value="idle">Select List</option>
                             <option
                               v-for="data in listType"
