--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <div
               class="box level py-3 my-2"
               v-for="(item, index) in filteredTasks"
+              v-if="list.id == item.listId"
               :key="item.id"
             >
               <div class="control">
@@ -304,23 +305,13 @@
               <div class="card-content">
                 <div class="content">
                   <div class="control">
-                    <input
-                      type="radio"
-                      v-model="sortAlphabet"
-                      name="filter"
-                      @click="sortAlphabet = true"
-                    />
+                    <input type="radio" v-model="filter" value="alpha" />
                     <label class="radio"> Sort alphabetically </label><br />
-                    <input
-                      type="radio"
-                      id="list.id"
-                      v-model="sortUndone"
-                      name="filter"
-                    />
+                    <input type="radio" v-model="filter" value="undone" />
                     <label class="radio"> Sort incomplete tasks </label><br />
-                    <input type="radio" v-model="sortFlag" name="filter" />
+                    <input type="radio" v-model="filter" value="flag" />
                     <label class="radio"> Sort flagged task first </label><br />
-                    <input type="radio" v-model="sortDate" name="filter" />
+                    <input type="radio" v-model="filter" value="date" />
                     <label class="radio"> Sort by due date (ascending) </label>
                   </div>
                 </div>
@@ -338,7 +329,7 @@
                     type="text"
                     placeholder="Task Name"
                     v-model="taskName"
-                    style="min-width: 200px"
+                    style="min-width: 300px"
                   />
                   <br />
                   <p v-if="error.taskName != ''" class="has-text-danger">
@@ -348,7 +339,7 @@
               </div>
               <div class="field">
                 <div class="select">
-                  <select v-model="checkList" style="min-width: 200px">
+                  <select v-model="checkList" style="min-width: 300px">
                     <option value="idle">Select List</option>
                     <option
                       v-for="data in listType"
@@ -366,20 +357,12 @@
               <div class="field">
                 <input class="input" type="date" v-model="duedate" />
               </div>
-              <div class="field">
-                <div class="control">
-                  <input type="checkbox" v-model="flagActive" />
-                </div>
+              <div class="field ml-3">
+                <input type="checkbox" v-model="flagActive" />
               </div>
               <span class="mr-3">Flag</span>
               <div class="field">
                 <div class="control is-flex is-flex-direction-row">
-                  <span
-                    class="mx-1 icon has-text-dark"
-                    @click="isSelectedBlack = true"
-                  >
-                    <i v-if="!isSelectedBlack" class="fas fa-circle"></i>
-                  </span>
                   <span
                     class="mx-1 icon has-text-dark"
                     @click="isSelectedBlack = false"
@@ -387,13 +370,12 @@
                     <i v-if="isSelectedBlack" class="fas fa-check-circle"></i>
                   </span>
                   <span
-                    class="mx-1 icon has-text-danger"
-                    @click="selectMark(isSelectedRed)"
+                    class="mx-1 icon has-text-danger box has-background-danger"
+                    @click="isSelectedRed = true"
                   >
-                    <i
-                      class="fas"
-                      :class="[isSelectedRed ? 'fa-check-circle' : 'fa-circle']"
-                    ></i>
+                    <span v-if="isSelectedRed">
+                      <i class="fas fa-check-circle"></i>
+                    </span>
                   </span>
                   <span
                     class="mx-1 icon has-text-success"
@@ -474,6 +456,7 @@
           isSelectedBlack: true,
           isSelectedRed: false,
           isSelectedGreen: false,
+
           error: {
             taskName: "",
             select: "",
@@ -497,12 +480,9 @@
 
           delListId: 0,
 
+          filter: "",
           hideDone: false,
           showFlag: false,
-          sortUndone: false,
-          sortAlphabet: false,
-          sortFlag: false,
-          sortDate: false,
 
           showModal: false,
           showDelete: false,
@@ -537,9 +517,9 @@
 
             function checkflag(a, b) {
               if (!a.flag && b.flag) {
-                return -1;
-              } else if (a.flag && !b.flag) {
                 return 1;
+              } else if (a.flag && !b.flag) {
+                return -1;
               } else {
                 return 0;
               }
@@ -557,20 +537,26 @@
               return 0;
             }
 
-            if (this.showFlag) {
-              return this.task.filter((data) => data.flag);
-            } else if (this.hideDone) {
-              return this.task.filter((data) => !data.status);
+            function sortDate(a, b) {
+              return new Date(a.duedate) - new Date(b.duedate);
+            }
+
+            if (this.filter == "undone") {
+              this.task.sort(compare);
+            } else if (this.filter == "alpha") {
+              this.task.sort(sortAlpha);
+            } else if (this.filter == "flag") {
+              this.task.sort(checkflag);
+            } else if (this.filter == "date") {
+              this.task.sort(sortDate);
             } else {
               return this.task;
             }
 
-            if (this.sortUndone) {
-              this.task.sort(compare);
-            } else if (this.sortAlphabet) {
-              this.task.sort(sortAlpha);
-            } else if (this.sortFlag) {
-              this.task.sort(checkflag);
+            if (this.showFlag) {
+              return this.task.filter((data) => data.flag);
+            } else if (this.hideDone) {
+              return this.task.filter((data) => !data.status);
             } else {
               return this.task;
             }
