--- a/index.html
+++ b/index.html
@@ -123,37 +123,6 @@
                         </div>
                       </div>
                       Flag
-                      <div class="field">
-                        <div class="control is-flex is-flex-direction-row">
-                          <p
-                            class="mx-1 icon has-text-dark"
-                            @click="isSelectedBlack = true"
-                          >
-                            <i
-                              class="fas fa-circle"
-                              :class="{'fa-check-circle': isSelectedBlack }"
-                            ></i>
-                          </p>
-                          <span
-                            class="mx-1 icon has-text-danger"
-                            @click="selectMark(isSelectedRed)"
-                          >
-                            <i
-                              class="fas"
-                              :class="[isSelectedRed ? 'fa-check-circle' : 'fa-circle']"
-                            ></i>
-                          </span>
-                          <span
-                            class="mx-1 icon has-text-success"
-                            @click="selectMark(isSelectedGreen )"
-                          >
-                            <i
-                              class="fas"
-                              :class="[isSelectedGreen ? 'fa-check-circle' : 'fa-circle']"
-                            ></i>
-                          </span>
-                        </div>
-                      </div>
                     </div>
                   </section>
                   <footer class="modal-card-foot">
@@ -178,7 +147,7 @@
                     ></button>
                   </header>
                   <section class="modal-card-body">
-                    <p>Are you sure you want to delete this task'?</p>
+                    <p>Are you sure you want to delete this task?</p>
                   </section>
                   <footer class="modal-card-foot">
                     <button class="button is-danger" @click="deleteItem()">
@@ -364,29 +333,28 @@
               <div class="field">
                 <div class="control is-flex is-flex-direction-row">
                   <span
-                    class="mx-1 icon has-text-dark box has-background-danger"
-                    @click="isSelectedBlack = !isSelectedBlack"
+                    class="mx-1 icon has-text-dark box is-rounded has-background-dark"
+                    @click="task.mark = 'black'"
                   >
-                    <span v-if="isSelectedBlack">
-                      <i class="fas fa-check-circle"></i>
+                    <span v-if="task.mark == 'black'">
+                      <i class="fas fa-check-circle has-text-white"></i>
                     </span>
                   </span>
                   <span
                     class="mx-1 icon has-text-danger box has-background-danger"
-                    @click="isSelectedRed = !isSelectedRed"
+                    @click="task.mark = 'red'"
                   >
-                    <span v-if="isSelectedRed">
-                      <i class="fas fa-check-circle"></i>
+                    <span v-if="task.mark == 'red'">
+                      <i class="fas fa-check-circle has-text-white"></i>
                     </span>
                   </span>
                   <span
-                    class="mx-1 icon has-text-success"
-                    @click="selectMark(isSelectedGreen )"
+                    class="mx-1 icon has-text-success box has-background-success"
+                    @click="task.mark = 'green'"
                   >
-                    <i
-                      class="fas"
-                      :class="[isSelectedGreen ? 'fa-check-circle' : 'fa-circle']"
-                    ></i>
+                    <span v-if="task.mark == 'green'">
+                      <i class="fas fa-check-circle has-text-white"></i
+                    ></span>
                   </span>
                 </div>
               </div>
