--- a/index.html
+++ b/index.html
@@ -79,121 +79,117 @@
                   <i class="fas fa-trash-alt"></i>
                 </span>
               </div>
-              <div class="modal" :class="{'is-active' : showModal}">
-                <div class="modal-background"></div>
-                <div class="modal-card">
-                  <header class="modal-card-head">
-                    <p class="modal-card-title">Edit Task</p>
-                    <button
-                      class="delete"
-                      aria-label="close"
-                      @click="showModal = false"
-                    ></button>
-                  </header>
-                  <section class="modal-card-body">
-                    <div class="field">
-                      <input
-                        class="input"
-                        placeholder="Task Name"
-                        v-model="editTaskName"
-                      />
-                      <p v-if="error.taskName != ''" class="has-text-danger">
-                        {{error.taskName}}
-                      </p>
-                    </div>
-                    <div class="field-body">
-                      <div class="field">
-                        <input
-                          class="input"
-                          type="date"
-                          v-model="editDuedate"
-                        />
-                      </div>
-                      <div class="field">
-                        <div class="select">
-                          <select v-model="editList">
-                            <option value="idle">Select List</option>
-                            <option
-                              v-for="data in listType"
-                              :key="data.id"
-                              :value="data.id"
-                            >
-                              {{data.title}}
-                            </option>
-                          </select>
-                        </div>
-                      </div>
-                      <div class="field">
-                        <div class="control">
-                          <input type="checkbox" v-model="editFlag" />
-                        </div>
-                      </div>
-                      <span style="color: black">flag</span>
-                      <div class="field ml-4">
-                        <div class="control is-flex is-flex-direction-row">
-                          <span
-                            class="mx-1 icon has-text-dark box is-rounded has-background-dark"
-                            @click="editMark = 'black'"
-                          >
-                            <span v-if="editMark == 'black'">
-                              <i class="fas fa-check-circle has-text-white"></i>
-                            </span>
-                          </span>
-                          <span
-                            class="mx-1 icon has-text-danger box has-background-danger"
-                            @click="editMark = 'red'"
-                          >
-                            <span v-if="editMark == 'red'">
-                              <i class="fas fa-check-circle has-text-white"></i>
-                            </span>
-                          </span>
-                          <span
-                            class="mx-1 icon has-text-success box has-background-success"
-                            @click="editMark = 'green'"
-                          >
-                            <span v-if="editMark == 'green'">
-                              <i class="fas fa-check-circle has-text-white"></i
-                            ></span>
-                          </span>
-                        </div>
-                      </div>
-                    </div>
-                  </section>
-                  <footer class="modal-card-foot">
-                    <button class="button is-success" @click="saveEdit">
-                      Save
-                    </button>
-                    <button class="button" @click="showModal = false">
-                      Cancel
-                    </button>
-                  </footer>
-                </div>
-              </div>
-              <div class="modal" :class="{'is-active' : showDelete}">
-                <div class="modal-background"></div>
-                <div class="modal-card">
-                  <header class="modal-card-head">
-                    <p class="modal-card-title">Delete Task</p>
-                    <button
-                      class="delete"
-                      aria-label="close"
-                      @click="showDelete = false"
-                    ></button>
-                  </header>
-                  <section class="modal-card-body">
-                    <p style="color: black">
-                      Are you sure you want to delete this task?
+            </div>
+            <div class="modal" :class="{'is-active' : showModal}">
+              <div class="modal-background"></div>
+              <div class="modal-card">
+                <header class="modal-card-head">
+                  <p class="modal-card-title">Edit Task</p>
+                  <button
+                    class="delete"
+                    aria-label="close"
+                    @click="showModal = false"
+                  ></button>
+                </header>
+                <section class="modal-card-body">
+                  <div class="field">
+                    <input
+                      class="input"
+                      placeholder="Task Name"
+                      v-model="editTaskName"
+                    />
+                    <p v-if="error.taskName != ''" class="has-text-danger">
+                      {{error.taskName}}
                     </p>
-                  </section>
-                  <footer class="modal-card-foot">
-                    <button class="button is-danger" @click="deleteItem()">
-                      Confirm
-                    </button>
-                    <button class="button" @click="showDelete = false">
-                      Cancel
-                    </button>
-                  </footer>
-                </div>
+                  </div>
+                  <div class="field-body">
+                    <div class="field">
+                      <input class="input" type="date" v-model="editDuedate" />
+                    </div>
+                    <div class="field">
+                      <div class="select">
+                        <select v-model="editList">
+                          <option value="idle">Select List</option>
+                          <option
+                            v-for="data in listType"
+                            :key="data.id"
+                            :value="data.id"
+                          >
+                            {{data.title}}
+                          </option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="field">
+                      <div class="control">
+                        <input type="checkbox" v-model="editFlag" />
+                      </div>
+                    </div>
+                    <span style="color: black">flag</span>
+                    <div class="field ml-4">
+                      <div class="control is-flex is-flex-direction-row">
+                        <span
+                          class="mx-1 icon has-text-dark box is-rounded has-background-dark"
+                          @click="editMark = 'black'"
+                        >
+                          <span v-if="editMark == 'black'">
+                            <i class="fas fa-check-circle has-text-white"></i>
+                          </span>
+                        </span>
+                        <span
+                          class="mx-1 icon has-text-danger box has-background-danger"
+                          @click="editMark = 'red'"
+                        >
+                          <span v-if="editMark == 'red'">
+                            <i class="fas fa-check-circle has-text-white"></i>
+                          </span>
+                        </span>
+                        <span
+                          class="mx-1 icon has-text-success box has-background-success"
+                          @click="editMark = 'green'"
+                        >
+                          <span v-if="editMark == 'green'">
+                            <i class="fas fa-check-circle has-text-white"></i
+                          ></span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+                <footer class="modal-card-foot">
+                  <button class="button is-success" @click="saveEdit">
+                    Save
+                  </button>
+                  <button class="button" @click="showModal = false">
+                    Cancel
+                  </button>
+                </footer>
+              </div>
+            </div>
+            <div class="modal" :class="{'is-active' : showDelete}">
+              <div class="modal-background"></div>
+              <div class="modal-card">
+                <header class="modal-card-head">
+                  <p class="modal-card-title">Delete Task</p>
+                  <button
+                    class="delete"
+                    aria-label="close"
+                    @click="showDelete = false"
+                  ></button>
+                </header>
+                <section class="modal-card-body">
+                  <p style="color: black">
+                    Are you sure you want to delete '{{delTaskName}}'?
+                  </p>
+                </section>
+                <footer class="modal-card-foot">
+                  <button class="button is-danger" @click="deleteItem()">
+                    Confirm
+                  </button>
+                  <button class="button" @click="showDelete = false">
+                    Cancel
+                  </button>
+                </footer>
               </div>
             </div>
             <div class="modal" :class="{'is-active' : showAddList}">
@@ -262,7 +258,7 @@
                   ></button>
                 </header>
                 <section class="modal-card-body">
-                  <p>Are you sure you want to delete this list?</p>
+                  <p>Are you sure you want to delete '{{delListName}}'?</p>
                 </section>
                 <footer class="modal-card-foot">
                   <button class="button is-danger" @click="deleteList()">
