--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@
                       v-model="radioItem.type"
                       value="undone"
                     />
-                    <label class="radio"> Sort incomplete tasks </label><br />
+                    <label class="radio"> Sort incomplete tasks first</label
+                    ><br />
                     <input type="radio" v-model="radioItem.type" value="flag" />
                     <label class="radio"> Sort flagged task first </label><br />
                     <input type="radio" v-model="radioItem.type" value="date" />
