🐛: show list error

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                       {{data.title}}
                     </option>
                   </select>
-                  <p v-if="error.select != ''" class="has-text-danger">
+                  <p v-if="error.showSelect" class="has-text-danger">
                     {{error.select}}
                   </p>
                 </div>
